--- a/package.xml
+++ b/package.xml
@@ -5,15 +5,18 @@
   <version>2.0.0</version>
   <description>Messages, services and action definitions useful for Human-Robot Interaction</description>
   <maintainer email="severin.lemaignan@pal-robotics.com">Séverin Lemaignan</maintainer>
+  <license>Apache License 2.0</license>
   <author email="severin.lemaignan@pal-robotics.com">Séverin Lemaignan</author>
-  <license>BSD</license>
 
-  <buildtool_depend>ament_cmake</buildtool_depend>
+  <buildtool_depend>ament_cmake_auto</buildtool_depend>
   <buildtool_depend>rosidl_default_generators</buildtool_depend>
 
   <exec_depend>rosidl_default_runtime</exec_depend>
 
   <depend>sensor_msgs</depend>
+
+  <test_depend>ament_lint_auto</test_depend>
+  <test_depend>ament_lint_common</test_depend>
 
   <member_of_group>rosidl_interface_packages</member_of_group>
 
